--- a/src/App.css
+++ b/src/App.css
@@ -47,11 +47,11 @@ button {
   position: sticky;
   top: 0;
 } */
-
+/* 
 .nav-bar {
   position: sticky;
   top: 0;
-}
+} */
 
 header span {
   color: var(--primary);
